# wohper

./: .gitignore  LICENSE  PROJECT_NOTEBOOK.md  README.md
config/: deepseek_v4_flash.contract.json  deepseek_v4_flash.prompt_micro.json  deepseek_v4_flash.prompt_smoke.json  deepseek_v4_flash.tokenizer_contract.json  deepseek_v4_quality_prompts.small.json  quality_prompts.small.json  quality_prompts.v2.small.json
docs/: agent-integration.md  architecture.md  compute-kernel-plan.md  deepseek-v4-flash-runtime-plan.md  deepseek_v4_flash_architecture_parity_2026-07-06.md  demo_16gb.md  gpu-offload-plan.md  linux-benchmark-runbook.md  linux-environment-setup.md  local-inference-engine-spec.md  model-quality-prompt-set.md  reference-parity-contract.md  test-matrix.md  transformer_math_fidelity_audit_2026-07-03.md
engine/zc_infer_core/: Cargo.toml  Dockerfile.dev  README.md
engine/zc_infer_core/src/: compute.rs  deepseek_v4.rs  direct_io.rs  glm_dsa_indexer.rs  lib.rs  model_format.rs  row_index.rs  scheduler.rs
engine/zc_infer_core/src/server/: api.rs  cluster.rs  generation.rs  mod.rs
scripts/: apply_wohper_host_tuning.sh  bootstrap_vps.sh  context_pack_smoke.ps1  convert_glm52_global_micro.ps1  convert_glm52_layer_slice.ps1  deepseek_chat_server.sh  deepseek_rust_server_smoke.sh  deepspec_integration_preflight.sh  deploy_global_micro_to_vps.ps1  deploy_merged_smoke_to_vps.ps1  deploy_zc_core_to_vps.ps1  generate_dummy_model.py  linux_bench_zc_core.sh  local_deepseek_v4_flash_metadata_sync.ps1  local_deepseek_v4_flash_shards.ps1  merge_global_with_layer_slice.ps1  (+40 more)
(+65 files in other folders)
